--- a/public/css/modals/application-review-modal.css
+++ b/public/css/modals/application-review-modal.css
@@ -3,6 +3,7 @@
 }
 
 .applicant-name {
+	font-size: 36px;
 	font-family: "Source Code Pro", monospace;
 	text-align: center;
 	text-transform: uppercase;
@@ -15,12 +16,18 @@
 	text-transform: uppercase;
 }
 
-.applicant-contact span[name="phone"] {
-	margin-right: 30px;
+.contact-item-wrapper span.fa {
+	margin: 0 10px;
 }
 
-.applicant-contact span.fa {
-	margin: 0 10px;
+.application-section h2 {
+	color: #efa516;
+	width: 100%;
+	height: 40px;
+	padding-right: 150px;
+	padding-top: 5px;
+	display: inline-block;
+	border-bottom: 0;
 }
 
 .application-section {
@@ -29,6 +36,7 @@
 
 .application-section i {
 	width: 48px;
+	margin-right: 20px;
 }
 
 .application-section p {
@@ -86,8 +94,12 @@ i {
 		margin: 10px 0;
 	}
 
-	.application-section legend {
+	.application-section h2 {
+		font-size: 20px;
+		margin-top: 5px;
 		margin-bottom: 5px;
+		padding-right: 10px;
+		height: 20px;
 	}
 
 	.application-section p {
@@ -103,6 +115,10 @@ i {
 		color: #50b5dd;
 		padding-left: 10px;
 		padding-right: 5px;
+	}
+
+	.application-section i {
+		margin-right: -10px;
 	}
 }
 
